--- a/Notebooks/1. Data Preparation.ipynb
+++ b/Notebooks/1. Data Preparation.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "2          75        10000           None  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "Name: Sleep Disorder, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,31 +250,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "None           219\n",
+       "No Disorder    219\n",
        "Sleep Apnea     78\n",
        "Insomnia        77\n",
        "Name: Sleep Disorder, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Sleep Disorder'].fillna('No Disorder', inplace=True)\n",
+    "# df['Sleep Disorder'].fillna('No Disorder', inplace=True)\n",
+    "# df['Sleep Disorder'].value_counts()\n",
+    "\n",
+    "df['Sleep Disorder'].replace('None', \"No Disorder\", inplace=True)\n",
     "df['Sleep Disorder'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +367,7 @@
        "      <td>Overweight</td>\n",
        "      <td>77</td>\n",
        "      <td>4200</td>\n",
-       "      <td>None</td>\n",
+       "      <td>No Disorder</td>\n",
        "      <td>126</td>\n",
        "      <td>83</td>\n",
        "    </tr>\n",
@@ -381,7 +384,7 @@
        "      <td>Normal</td>\n",
        "      <td>75</td>\n",
        "      <td>10000</td>\n",
-       "      <td>None</td>\n",
+       "      <td>No Disorder</td>\n",
        "      <td>125</td>\n",
        "      <td>80</td>\n",
        "    </tr>\n",
@@ -398,7 +401,7 @@
        "      <td>Normal</td>\n",
        "      <td>75</td>\n",
        "      <td>10000</td>\n",
-       "      <td>None</td>\n",
+       "      <td>No Disorder</td>\n",
        "      <td>125</td>\n",
        "      <td>80</td>\n",
        "    </tr>\n",
@@ -418,12 +421,12 @@
        "2                       60             8       Normal          75   \n",
        "\n",
        "   Daily Steps Sleep Disorder BP High BP Low  \n",
-       "0         4200           None     126     83  \n",
-       "1        10000           None     125     80  \n",
-       "2        10000           None     125     80  "
+       "0         4200    No Disorder     126     83  \n",
+       "1        10000    No Disorder     125     80  \n",
+       "2        10000    No Disorder     125     80  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
